Added main page

--- a/package.json
+++ b/package.json
@@ -13,15 +13,24 @@
     "autoprefixer": "^10.4.16",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
+    "jquery": "^3.7.1",
     "postcss": "^8.4.32",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.20.1",
-    "tailwindcss": "^3.3.6"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5",
+    "tailwindcss": "^3.3.6",
+    "three": "^0.159.0",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-helmet": "^6.1.11",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
